# localgcp

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  ROADMAP.md  docker-compose.yml  gcloud  gsutil  mkdocs.yml  pyproject.toml
.claude/commands/: docker-publish.md
.github/workflows/: pages.yml  tests.yml
cloudbox/: config.py  gcloudlocal.py  gsutillocal.py  main.py
cloudbox/admin/: app.py
cloudbox/admin/templates/: index.html
cloudbox/core/: auth.py  errors.py  middleware.py  store.py
cloudbox/services/bigquery/: app.py  engine.py
cloudbox/services/firestore/: app.py  models.py  query.py  store.py
cloudbox/services/gcs/: app.py  models.py  store.py
cloudbox/services/kms/: app.py  models.py  store.py
cloudbox/services/logging/: app.py  filter.py  store.py
cloudbox/services/pubsub/: app.py  filter.py  grpc_server.py  models.py  store.py
cloudbox/services/scheduler/: app.py  models.py  store.py  worker.py
cloudbox/services/secretmanager/: app.py  models.py  store.py
cloudbox/services/spanner/: app.py  engine.py
cloudbox/services/tasks/: app.py  models.py  store.py  worker.py
docs/: index.html  index.md
docs/services/: bigquery.md  firestore.md  gcs.md  kms.md  logging.md  scheduler.md  secretmanager.md  spanner.md  tasks.md
examples/: README.md  shared.py
examples/bigquery/: information_schema.py  tables.py  views.py
examples/firestore/: queries.py
examples/gcs/: cors.py  retention.py
examples/kms/: encrypt_decrypt.py  key_rotation.py
examples/logging/: exclusions.py
examples/pubsub/: batch_publish.py  publish_subscribe.py
examples/secretmanager/: secrets.py
examples/tasks/: rate_limits.py
localgcp/: config.py  gcloudlocal.py  gsutillocal.py  main.py
localgcp/admin/: app.py
localgcp/admin/static/: admin.css  admin.js
localgcp/admin/templates/: index.html
localgcp/services/bigquery/: engine.py
localgcp/services/gcs/: app.py  models.py
localgcp/services/pubsub/: app.py  grpc_server.py  models.py  store.py
localgcp/services/scheduler/: app.py  models.py  store.py  worker.py
pages/: index.html
sdk_compat/: clients.py
tests/: conftest.py  test_admin.py  test_bigquery.py  test_firestore.py  test_gcs.py  test_gcs_resumable.py  test_gsutillocal.py  test_kms.py  test_logging.py  test_pubsub.py  test_pubsub_streaming.py  test_scheduler.py  test_scheduler_worker.py  test_secretmanager.py  test_tasks.py
