[project]
name = "localgcp"
version = "0.1.0"
description = "Local emulator for GCP services"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "jinja2>=3.1",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "grpcio>=1.60",
    "protobuf>=4.25",
    "googleapis-common-protos>=1.63",
    "duckdb>=1.5.2",
    "croniter>=1.3",
]

[project.scripts]
localgcp = "localgcp.main:main"
gcloudlocal = "localgcp.gcloudlocal:main"
gsutillocal = "localgcp.gsutillocal:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "genbadge[coverage]>=1.1",
    "httpx>=0.27",
    "google-cloud-storage>=2.16",
    "google-cloud-pubsub>=2.21",
    "google-cloud-firestore>=2.16",
    "google-cloud-secret-manager>=2.20",
    "google-cloud-tasks>=2.16",
    "google-cloud-bigquery>=3.41.0",
    "google-cloud-scheduler>=2.19.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["localgcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=localgcp --cov-report=term-missing --cov-report=html:htmlcov --cov-report=xml"

[tool.coverage.run]
source = ["localgcp"]
omit = [
    "localgcp/main.py",
    "localgcp/admin/*",
    "localgcp/gcloudlocal.py",
    "localgcp/services/pubsub/grpc_server.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
