[project]
name = "cloudbox"
version = "0.2.3"
description = "Local emulator for GCP services"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "jinja2>=3.1",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "grpcio>=1.60",
    "google-cloud-pubsub>=2.21",
    "duckdb>=1.5.2",
    "croniter>=1.3",
]

[project.scripts]
cloudbox = "cloudbox.main:main"
gcloudlocal = "cloudbox.gcloudlocal:main"
gsutillocal = "cloudbox.gsutillocal:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "genbadge[coverage]>=1.1",
    "httpx>=0.27",
    "google-cloud-storage>=2.16",
    "google-cloud-firestore>=2.16",
    "google-cloud-secret-manager>=2.20",
    "google-cloud-tasks>=2.16",
    "google-cloud-bigquery>=3.41.0",
    "google-cloud-scheduler>=2.19.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cloudbox"]

[tool.hatch.build.targets.sdist]
exclude = [
    "activate/",
    ".venv/",
    "htmlcov/",
    "dist/",
    ".swp",
    "*.sw*",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=cloudbox --cov-report=term-missing --cov-report=html:htmlcov --cov-report=xml"

[tool.coverage.run]
source = ["cloudbox"]
omit = [
    "cloudbox/main.py",
    "cloudbox/admin/*",
    "cloudbox/gcloudlocal.py",
    "cloudbox/services/pubsub/grpc_server.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
