[project]
name = "cloudbox"
version = "0.2.3"
description = "Local emulator for GCP services"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "jinja2>=3.1",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "grpcio>=1.60",
    "google-cloud-pubsub>=2.21",
    "duckdb>=1.5.2",
    "croniter>=1.3",
    "cryptography>=42.0",
]

[project.scripts]
cloudbox = "cloudbox.main:main"
gcloudlocal = "cloudbox.gcloudlocal:main"
gsutillocal = "cloudbox.gsutillocal:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "genbadge[coverage]>=1.1",
    "httpx>=0.27",
    "ruff>=0.9",
    "google-cloud-storage>=2.16",
    "google-cloud-firestore>=2.16",
    "google-cloud-secret-manager>=2.20",
    "google-cloud-tasks>=2.16",
    "google-cloud-bigquery>=3.41.0",
    "google-cloud-scheduler>=2.19.0",
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cloudbox"]

[tool.hatch.build.targets.sdist]
exclude = [
    "activate/",
    ".venv/",
    "htmlcov/",
    "dist/",
    ".swp",
    "*.sw*",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=cloudbox --cov-report=term-missing --cov-report=html:htmlcov --cov-report=xml"

[tool.coverage.run]
source = ["cloudbox"]
omit = [
    "cloudbox/main.py",
    "cloudbox/admin/*",
    "cloudbox/gcloudlocal.py",
    "cloudbox/services/pubsub/grpc_server.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "D",   # pydocstyle (Google style)
]
ignore = [
    "D100", # Missing docstring in public module  — we add these manually
    "D104", # Missing docstring in public package — __init__.py files are fine empty
    "D205", # 1 blank line required between summary line and description
    "D415", # First line should end with a period — too strict
    "B008", # Do not perform function calls in default arguments — FastAPI pattern
    "E501", # Line too long — handled by formatter
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
